# Lab

./: CMakeLists.txt  README.md  build_run.sh  main_bench.cpp  part1_bench.cpp  part2_bench.cpp
cmake/: CPM.cmake
include/: cache_size.h  cholesky.h  heat.h  n_body.h
script/: plot.py
src/: cache_size.cpp  cholesky.cpp  n_body.cpp  setup.cpp  stencil.cpp  utils.cpp
test/: CMakeLists.txt  cholesky_test.cpp  heat_test.cpp  nbody_test.cpp
